chore: Delete node_modules and compiled web templates.